# SDL3_gfx

./: CMakeLists.txt  ChangeLog  README  README.md  SDL3_framerate.c  SDL3_framerate.h  SDL3_gfx.pc.in  SDL3_gfx.vcxproj  SDL3_gfxPrimitives.c  SDL3_gfxPrimitives.h  SDL3_gfxPrimitives_font.h  SDL3_imageFilter.c  SDL3_imageFilter.h  SDL3_rotozoom.c
Docs/: html.doxyfile
Docs/html/: _r_e_a_d_m_e.html  _r_e_a_d_m_e_source.html  _s_d_l3__framerate_8c.html  _s_d_l3__framerate_8c_source.html  _s_d_l3__framerate_8h.html  _s_d_l3__framerate_8h_source.html  _s_d_l3__gfx_primitives_8c.html  _s_d_l3__gfx_primitives_8c_source.html  _s_d_l3__gfx_primitives_8h.html  _s_d_l3__gfx_primitives_8h_source.html  _s_d_l3__gfx_primitives__font_8h.html  _s_d_l3__gfx_primitives__font_8h_source.html  _s_d_l3__image_filter_8c.html  _s_d_l3__image_filter_8c_source.html  _s_d_l3__image_filter_8h.html  _s_d_l3__image_filter_8h_source.html  _s_d_l3__rotozoom_8c.html  _s_d_l3__rotozoom_8c_source.html  _s_d_l3__rotozoom_8h.html  _s_d_l3__rotozoom_8h_source.html  annotated.html  classes.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_a.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_f.html  globals_func.html  globals_func_a.html  globals_func_b.html  globals_func_c.html  globals_func_e.html  globals_func_f.html  (+21 more)
test/: CMakeLists.txt  TestFramerate.vcxproj  TestGfx.c  TestGfx.vcxproj  TestImageFilter.vcxproj  TestRotozoom.vcxproj  testframerate.c  testimagefilter.c  testrotozoom.c
